Changing CSS and HTTPS

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <iframe src="" id="iframe"> </iframe>
     </main>
     <script 
-        src="http://ajaxorg.github.io/ace-builds/src-min-noconflict/ace.js" 
+        src="https://ajaxorg.github.io/ace-builds/src-min-noconflict/ace.js" 
         type="text/javascript" 
         charset="utf-8"
     ></script>
